# blang

./: .gitignore  CMakeLists.txt  Makefile_  build.c  readme.md
.github/workflows/: ci_comptests.yml
b_src/: goal.b  return.b  return.ll  return_rval.b
ir/: llvm.c  llvm.ll
src/: clex.c  clex_util.cpp  cli.cpp  common.hpp  gen_ir.cpp  gen_ir.hpp  main.cpp  nob.c  nob_ext.h  old_parsing.cpp  output.c  output.h  state.cpp  state.hpp  types.hpp
